connect docker images to GitHub container registry

--- a/fileservice/Dockerfile
+++ b/fileservice/Dockerfile
@@ -1,5 +1,8 @@
 FROM php:7.4-alpine
 
+LABEL org.opencontainers.image.source=https://github.com/hfxbse/web-engineering-2023
+LABEL org.opencontainers.image.description="The provided backend file service for the 2023 web engineering project."
+
 COPY . /app
 COPY upload.ini /usr/local/etc/php/conf.d/upload.ini
 
